--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   "dependencies": {
     "@strapi/design-system": "^2.0.0-rc.30",
     "@strapi/icons": "^2.0.0-rc.30",
-    "react-intl": "^7.1.14"
+    "react-intl": "^7.1.14",
+    "stripe": "^19.2.0"
   },
   "devDependencies": {
     "@strapi/strapi": "^5.30.0",
